--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>User</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
 
 
+<table border="1">
+    <thead>
+    <tr>
+        <th>Username</th>
+        <th>Roles</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="user : ${user}">
+        <td th:text="${user.username}">Username</td>
+        <td th:text="${user.roles}">Roles</td>
+    </tr>
+    </tbody>
+</table>
+<a href="/">На страницу <b>домой</b></a>
+<br/>
+<a href="/logout"/>Выйти из аккаунта</a>
 </body>
 </html>
