--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title>Admin Panel</title>
+<head>
+    <title>Admin Panel</title>
 </head>
 <body>
 <h1>Admin Panel</h1><a href="/admin/new">Create New User</a>
-<table border="1">
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Roles</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${users}">
-        <td th:text="${user.username}">Username</td>
-        <td th:text="${user.roles}">Roles</td>
-        <td><a th:href="@{/admin/edit/{id}(id=${user.id})}">Edit</a>
-            <a th:href="@{/admin/delete/{id}(id=${user.id})}" th:onclick="return confirm('Are you sure?')">Delete</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<a href="/logout"/>Выйти из аккаунта</a>
-<br/>
-<a href="/">На страницу <b>домой</b></a>
+<div>
+    <table>
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.id}">ID</td>
+            <td th:text="${user.firstName}">First Name</td>
+            <td th:text="${user.lastName}">Last name</td>
+            <td th:text="${user.age}">Age</td>
+            <td th:text="${user.email}">Email</td>
+            <td th:text="${user.roles}">Role</td>
+            <td>
+                <a th:href="@{/admin/edit/{id}(id=${user.id})}">Edit</a>
+                <a th:href="@{/admin/delete/{id}(id=${user.id})}" th:onclick="return confirm('Are you sure?')">Delete</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <a href="/logout"/>Выйти из аккаунта</a>
+    <br/>
+    <a href="/">На страницу <b>домой</b></a>
+</div>
 </body>
 </html>
