--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>User</title>
+    <title>User page</title>
 </head>
 <body>
-
-
-<table border="1">
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Roles</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${user}">
-        <td th:text="${user.username}">Username</td>
-        <td th:text="${user.roles}">Roles</td>
-    </tr>
-    </tbody>
-</table>
-<a href="/">На страницу <b>домой</b></a>
-<br/>
-<a href="/logout"/>Выйти из аккаунта</a>
+<h1>User page</h1>
+<div>
+    <table>
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td th:text="${user.id}">ID</td>
+            <td th:text="${user.firstName}">First Name</td>
+            <td th:text="${user.lastName}">Last name</td>
+            <td th:text="${user.age}">Age</td>
+            <td th:text="${user.email}">Email</td>
+            <td th:text="${user.roles}">Role</td>
+        </tr>
+        </tbody>
+    </table>
+    <a href="/logout"/>Выйти из аккаунта</a>
+    <br/>
+    <a href="/">На страницу <b>домой</b></a>
+</div>
 </body>
 </html>
